--- a/css/main.css
+++ b/css/main.css
@@ -64,10 +64,6 @@ body{
   width: 28px;
 }
 
-.cuenta_icon:hover{
-  filter: drop-shadow(0 1px 2px rgb(46, 46, 46));
-}
-
 .menu_overlay{
   background-color: #000000a7;
   position: fixed;
@@ -83,7 +79,9 @@ body{
 
 .container_menu{
   width: 100%;
+  max-width: 500px;
   height: 90%;
+  margin: 0 auto;
   position: absolute;
   background-color: var(--primario);
   right: 0;
@@ -127,6 +125,7 @@ body{
 
 .container_login a{
   width: 320;
+  max-width: 350px;
   height: 55px;
   display: flex;
   gap: 8px;
@@ -193,7 +192,7 @@ body{
   align-items: center;
   padding: 0 16px;
   margin: 16px auto;
-  max-width: 768px;
+  max-width: 600px;
 }
 
 .header--info{
@@ -215,10 +214,12 @@ body{
 
 .plus_icon{
   width: 40px;
+  transition: 0.3s;
 }
 
 .plus_icon:hover{
-  filter: drop-shadow(0 1px 1.5px rgba(168, 168, 168, 0.829));
+  transform: scale(1.1);
+  transition: 0.3s;
 }
 
 .container_task{
@@ -227,7 +228,7 @@ body{
   gap: 8px;
   width: 95%;
   margin: 0 auto;
-  max-width: 768px;
+  max-width: 600px;
   margin: 0 auto;
 }
 
